[project]
name = "pms7003"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Boye A. Høverstad", email = "boyeah@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pyserial>=3.5",
]

[project.scripts]
pms7003 = "pms7003:main"
loopback = "pms7003.loopback:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipython>=8.30.0"]
