[project]
name = "pms7003"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Boye A. Høverstad", email = "boyeah@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "pyserial>=3.5",
]

[project.scripts]
pms7003 = "pms7003:main"
loopback = "pms7003.test_utils.loopback:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
    "ruff>=0.8.4",
]
